--- a/index.html
+++ b/index.html
@@ -13,25 +13,61 @@
 </head>
 <body>
     <div id="page">
+        <div class="section">
+            <p id="n1">당신의 시작은 1입니까?</p>
+            <p id="n2">'저의 시작은 <span>'29'</span> 입니다.'</p>
+        </div>
+        <div class="section"></div>
+        <div class="section"></div>
+        <div class="section">
+            <div class="box1">
+                <div class="con1 conani"></div>
+                <p class="txt">마우스를 올려보세요</p>
+            </div>
+            <img src="img/c1.png" alt="img" id="c1"   class="c1ani">
+            <img src="img/c2.png" alt="img" id="c2"   class="c2ani">
+            <img src="img/c3.png" alt="img" id="c3"   class="c3ani">
+            <img src="img/c4.png" alt="img" id="c4"   class="c4ani">
+            <img src="img/c5.png" alt="img" id="c5"   class="c5ani">
+            <img src="img/c6.png" alt="img" id="c6"   class="c6ani">
+            <img src="img/c7.png" alt="img" id="c7"   class="c7ani">
+            <img src="img/c8.png" alt="img" id="c8"   class="c8ani">
+            <img src="img/c9.png" alt="img" id="c9"   class="c9ani">
+            <img src="img/c10.png" alt="img" id="c10" class="c10ani">
+            <img src="img/c11.png" alt="img" id="c11" class="c11ani">
+            <img src="img/c12.png" alt="img" id="c12" class="c12ani">
+            <img src="img/c13.png" alt="img" id="c13" class="c13ani">
+            <img src="img/c14.png" alt="img" id="c14" class="c14ani">
+        </div>
+        <div class="section"></div>
+        <div class="section"></div>
+        <div class="section">
+            <img src="img/bg7-2.png" alt="img" class="t1 t1ani">
+            <img src="img/bg7-2.png" alt="img" class="t2 t2ani">
+            <img src="img/bg7-3.png" alt="img" class="t3 t3ani" width="670">
+        </div>
         <div class="section"></div>
         <div class="section"></div>
         <div class="section"></div>
         <div class="section"></div>
+        <div class="section">
+            <p><img src="img/Asset 1.png" alt="img"></p>
+        </div>
+        <div class="section"></div>
+        <div class="section"></div>
+        <div class="section">
+            <p><img src="img/Asset 2.png" alt="img"></p>
+        </div>
         <div class="section"></div>
         <div class="section"></div>
         <div class="section"></div>
-        <div class="section"></div>
-        <div class="section"></div>
-        <div class="section"></div>
-        <div class="section"></div>
-        <div class="section"></div>
-        <div class="section"></div>
-        <div class="section"></div>
-        <div class="section"></div>
-        <div class="section"></div>
-        <div class="section"></div>
-        <div class="section"></div>
-        <div class="section"></div>
+        <div class="section">
+            <img src="img/감.png" alt="img" class="l1">
+            <img src="img/사.png" alt="img" class="l2">
+            <img src="img/합.png" alt="img" class="l3">
+            <img src="img/니.png" alt="img" class="l4">
+            <img src="img/다.png" alt="img" class="l5">
+        </div>
     </div>
 </body>
 </html>
