--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="jquery.min.js"></script>
+    <script src="jpreloader.js"></script>
     <script src="fullpage.js"></script>
     <script src="index.js" defer></script>
     <link rel="stylesheet" href="fullpage.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="jpreloader.css">
 </head>
 <body>
     <div id="page">
@@ -69,5 +71,6 @@
             <img src="img/다.png" alt="img" class="l5">
         </div>
     </div>
+    <div id="jsp"></div>
 </body>
 </html>
