--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <div id="page">
         <div class="section">
-            <p id="n1">당신의 시작은 1입니까?</p>
-            <p id="n2">'저의 시작은 <span>'29'</span> 입니다.'</p>
+            <p id="n1" class="n1ani">당신의 시작은 1입니까?</p>
+            <p id="n2" class="n2ani">'저의 시작은 <span>'29'</span> 입니다.'</p>
         </div>
         <div class="section"></div>
         <div class="section"></div>
