--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div id="page">
         <div class="section">
-            <p id="n1" class="n1ani">당신의 시작은 1입니까?</p>
+            <p id="n1">당신의 시작은 1입니까?</p>
             <p id="n2" class="n2ani">'저의 시작은 <span>'29'</span> 입니다.'</p>
         </div>
         <div class="section"></div>
@@ -50,7 +50,10 @@
         </div>
         <div class="section"></div>
         <div class="section"></div>
-        <div class="section"></div>
+        <div class="section">
+            <img src="img/bg10-2.png" alt="img" class="sns1">
+            <img src="img/bg10-3.png" alt="img" class="sns2">
+        </div>
         <div class="section"></div>
         <div class="section">
             <p><img src="img/Asset 1.png" alt="img"></p>
