--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <img src="img/c11.png" alt="img" id="c11" class="c11ani">
             <img src="img/c12.png" alt="img" id="c12" class="c12ani">
             <img src="img/c13.png" alt="img" id="c13" class="c13ani">
-            <img src="img/C14.png" alt="img" id="c14" class="c14ani">
+            <img src="img/c14.png" alt="img" id="c14" class="c14ani">
         </div>
         <div class="section"></div>
         <div class="section"></div>
