--- a/index.html
+++ b/index.html
@@ -41,18 +41,26 @@
             <img src="img/c13.png" alt="img" id="c13" class="c13ani">
             <img src="img/c14.png" alt="img" id="c14" class="c14ani">
         </div>
-        <div class="section"></div>
-        <div class="section"></div>
         <div class="section">
+            <p>100% made by me</p>
+        </div>
+        <div class="section">
+            <p><img src="img/Asset 3.png" alt="txt"></p>
+        </div>
+        <div class="section">
+            <p>100% made by me</p>
             <img src="img/bg7-2.png" alt="img" class="t1 t1ani">
             <img src="img/bg7-2.png" alt="img" class="t2 t2ani">
             <img src="img/bg7-3.png" alt="img" class="t3 t3ani" width="670">
         </div>
-        <div class="section"></div>
+        <div class="section">
+            <p>100% made by me</p>
+        </div>
         <div class="section"></div>
         <div class="section">
-            <img src="img/bg10-2.png" alt="img" class="sns1">
-            <img src="img/bg10-3.png" alt="img" class="sns2">
+            <p>100% made by me</p>
+            <img src="img/bg10-2.png" alt="img" class="sns1" width="80%">
+            <img src="img/bg10-3.png" alt="img" class="sns2" width="80%">
         </div>
         <div class="section"></div>
         <div class="section">
