--- a/index.html
+++ b/index.html
@@ -22,43 +22,52 @@
         <div class="section"></div>
         <div class="section"></div>
         <div class="section">
-            <div class="box1">
-                <div class="con1 conani"></div>
-                <p class="txt">마우스를 올려보세요</p>
+            <div class="box2">
+                <div class="box1">
+                    <div class="con1 conani"></div>
+                    <p class="txt">마우스를 올려보세요</p>
+                </div>
+                <img src="img/c1.png" alt="img" id="c1"   class="c1ani">
+                <img src="img/c2.png" alt="img" id="c2"   class="c2ani">
+                <img src="img/c3.png" alt="img" id="c3"   class="c3ani">
+                <img src="img/c4.png" alt="img" id="c4"   class="c4ani">
+                <img src="img/c5.png" alt="img" id="c5"   class="c5ani">
+                <img src="img/c6.png" alt="img" id="c6"   class="c6ani">
+                <img src="img/c7.png" alt="img" id="c7"   class="c7ani">
+                <img src="img/c8.png" alt="img" id="c8"   class="c8ani">
+                <img src="img/c9.png" alt="img" id="c9"   class="c9ani">
+                <img src="img/c10.png" alt="img" id="c10" class="c10ani">
+                <img src="img/c11.png" alt="img" id="c11" class="c11ani">
+                <img src="img/c12.png" alt="img" id="c12" class="c12ani">
+                <img src="img/c13.png" alt="img" id="c13" class="c13ani">
+                <img src="img/c14.png" alt="img" id="c14" class="c14ani">
             </div>
-            <img src="img/c1.png" alt="img" id="c1"   class="c1ani">
-            <img src="img/c2.png" alt="img" id="c2"   class="c2ani">
-            <img src="img/c3.png" alt="img" id="c3"   class="c3ani">
-            <img src="img/c4.png" alt="img" id="c4"   class="c4ani">
-            <img src="img/c5.png" alt="img" id="c5"   class="c5ani">
-            <img src="img/c6.png" alt="img" id="c6"   class="c6ani">
-            <img src="img/c7.png" alt="img" id="c7"   class="c7ani">
-            <img src="img/c8.png" alt="img" id="c8"   class="c8ani">
-            <img src="img/c9.png" alt="img" id="c9"   class="c9ani">
-            <img src="img/c10.png" alt="img" id="c10" class="c10ani">
-            <img src="img/c11.png" alt="img" id="c11" class="c11ani">
-            <img src="img/c12.png" alt="img" id="c12" class="c12ani">
-            <img src="img/c13.png" alt="img" id="c13" class="c13ani">
-            <img src="img/c14.png" alt="img" id="c14" class="c14ani">
+            
+            
         </div>
         <div class="section">
             <p>100% made by me</p>
+            <img src="img/Asset 4.png" alt="txt">
         </div>
         <div class="section">
             <p><img src="img/Asset 3.png" alt="txt"></p>
         </div>
         <div class="section">
-            <p>100% made by me</p>
+            <p class="txt1">100% made by me</p>
+            <img src="img/Asset 5.png" alt="txt" class="rat">
             <img src="img/bg7-2.png" alt="img" class="t1 t1ani">
             <img src="img/bg7-2.png" alt="img" class="t2 t2ani">
             <img src="img/bg7-3.png" alt="img" class="t3 t3ani" width="670">
         </div>
         <div class="section">
+            <img src="img/Asset 6.png" alt="txt">
+            <img src="img/Asset 7.png" alt="txt">
             <p>100% made by me</p>
         </div>
         <div class="section"></div>
         <div class="section">
             <p>100% made by me</p>
+            <img src="img/Asset 8.png" alt="txt">
             <img src="img/bg10-2.png" alt="img" class="sns1" width="80%">
             <img src="img/bg10-3.png" alt="img" class="sns2" width="80%">
         </div>
